--- a/application/modules/planner/views/scripts/forms/edit-day.phtml
+++ b/application/modules/planner/views/scripts/forms/edit-day.phtml
@@ -48,20 +48,14 @@ $this->selectedStatus2 = $selectedStatus2;
     <tr>
         <td>
             <label class="control-label" for="time_exclude">Time Start</label>
-            <div class="input-append bootstrap-timepicker-component">
+            <div class="input-append bootstrap-timepicker">
                 <?php echo $this->element->time_start2->setAttrib('class', 'timepicker-start2 input-mini') ?>
-                <span class="add-on">
-                    <i class="icon-time"></i>
-                </span>
             </div>
         </td>
         <td>
             <label class="control-label" for="time_exclude">Time end</label>
-            <div class="input-append bootstrap-timepicker-component">
+            <div class="input-append bootstrap-timepicker">
                 <?php echo $this->element->time_end2->setAttrib('class', 'timepicker-end2 input-mini') ?>
-                <span class="add-on">
-                    <i class="icon-time"></i>
-                </span>
             </div>
         </td>
     <tr>
