--- a/application/modules/planner/views/scripts/planning/_blocks/group_row.phtml
+++ b/application/modules/planner/views/scripts/planning/_blocks/group_row.phtml
@@ -63,13 +63,13 @@
 
                 <tr class="week-table-header" style="background-color: #<?php echo $this->group['color'];?>">
                     <th class="group-user-name" ><?php echo $this->group['group_name']; ?></th>
-                    <th class="week-table-header-monday week-table-header-day">Maandag</th>
-                    <th class="week-table-header-tuesday week-table-header-day">Dinsdag</th>
-                    <th class="week-table-header-wednesday week-table-header-day">Woensdag</th>
-                    <th class="week-table-header-thursday week-table-header-day">Donderdag</th>
-                    <th class="week-table-header-friday week-table-header-day">Vrijdag</th>
-                    <th class="week-table-header-saturday week-table-header-day">Zaterdag</th>
-                    <th class="week-table-header-saturday week-table-header-day">Zondag</th>
+                    <th class="week-table-header-monday week-table-header-day">Monday</th>
+                    <th class="week-table-header-tuesday week-table-header-day">Tuesday</th>
+                    <th class="week-table-header-wednesday week-table-header-day">Wednesday</th>
+                    <th class="week-table-header-thursday week-table-header-day">Thursday</th>
+                    <th class="week-table-header-friday week-table-header-day">Friday</th>
+                    <th class="week-table-header-saturday week-table-header-day">Saturday</th>
+                    <th class="week-table-header-saturday week-table-header-day">Sunday</th>
                 </tr>
                 </thead>
                 <tbody>
