--- a/application/modules/planner/views/scripts/group-settings/_blocks/user_planning.phtml
+++ b/application/modules/planner/views/scripts/group-settings/_blocks/user_planning.phtml
@@ -8,25 +8,25 @@
         <thead>
         <tr>
             <th class="span2">
-                Maandag
+                Monday
             </th>
             <th class="span2">
-                Dinsdag
+                Tuesday
             </th>
             <th class="span2">
-                Dinsdag
+                Wednesday
             </th>
             <th class="span2">
-                Donderdag
+                Thursday
             </th>
             <th class="span2">
-                Vrijdag
+                Friday
             </th>
             <th class="span2">
-                Zaterdag
+                Saturday
             </th>
             <th class="span2">
-                Zondag
+                Sunday
             </th>
         </tr>
         </thead>
