status popup changes

--- a/application/modules/planner/views/scripts/forms/edit-day.phtml
+++ b/application/modules/planner/views/scripts/forms/edit-day.phtml
@@ -47,13 +47,13 @@ $additionalStyleForInput = ' style="margin: 0px;" '; //I can't replace common st
                     <td>
                         <div class="input-time">
                             <input type="text" value="<?php echo @$startHourValue; ?>" <?php echo $additionalStyleForInput . $disabledInput ?>  name="start_hour" class="set-time-hour-status start-hour set-time-hour-field">:
-                            <input type="text" value="<?php echo @$startMinValue; ?>"  <?php echo $additionalStyleForInput . $disabledInput?> name="start_min" class="set-time-min-status start-min">
+                            <input type="text" value="<?php echo @$startMinValue; ?>"  <?php echo $additionalStyleForInput . $disabledInput?> name="start_min" class="set-time-min-status start-min set-time-mins-field">
                         </div>
                     </td>
                     <td>
                         <div class="input-time">
-                            <input type="text" value="<?php echo @$endHourValue; ?>" <?php echo $additionalStyleForInput . $disabledInput ?>  name="end_hour" class="set-time-hour-status end-hour">:
-                            <input type="text" value="<?php echo @$endMinValue; ?>" <?php echo $additionalStyleForInput . $disabledInput ?>  name="end_min" class="set-time-min-status end-min">
+                            <input type="text" value="<?php echo @$endHourValue; ?>" <?php echo $additionalStyleForInput . $disabledInput ?>  name="end_hour" class="set-time-hour-status end-hour set-time-hour-field">:
+                            <input type="text" value="<?php echo @$endMinValue; ?>" <?php echo $additionalStyleForInput . $disabledInput ?>  name="end_min" class="set-time-min-status end-min set-time-mins-field">
                         </div>
                     </td>
                 <td></td>
