New status popup

--- a/application/modules/planner/views/scripts/overview/_blocks/overview-user-row.phtml
+++ b/application/modules/planner/views/scripts/overview/_blocks/overview-user-row.phtml
@@ -75,10 +75,10 @@
         </tr>
         <tr class="week-table-header" style="background-color: #<?php echo $this->group['color'];?>">
             <th class="group-user-name" ><?php echo $this->group['group_name']; ?></th>
-            <th class="group-user-worked">Gewerkte uren</th>
-            <th class="group-user-used-free-days">Vrije uren</th>
-            <th class="group-user-overtime">Overuren</th>
-            <th class="group-user-doctor-days">Ziekte/buitengew</th>
+            <th class="group-user-worked">Work Hours</th>
+            <th class="group-user-used-free-days">Holiday Hours</th>
+            <th class="group-user-overtime">Over Hours</th>
+            <th class="group-user-doctor-days">Missing Hours</th>
         </tr>
         </thead>
         <tbody>
