--- a/application/modules/planner/views/scripts/planning/index.phtml
+++ b/application/modules/planner/views/scripts/planning/index.phtml
@@ -28,6 +28,6 @@
 
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-primary button-submit" data-form="form-edit-day">Save</button>
+        <button type="button" class="btn btn-primary button-submit" id="form-edit-day" data-form="form-edit-day">Save</button>
     </div>
 </div>
