--- a/application/modules/planner/views/scripts/checking/_blocks/user_row.phtml
+++ b/application/modules/planner/views/scripts/checking/_blocks/user_row.phtml
@@ -8,10 +8,8 @@
  * $this->group array $group data
  */
 $user = $this->user;
-?>
 
 
-<?php
 $additionalClass = '';
 if (! empty($user['check_out'])) {
     $additionalClass = 'checked-out success';
@@ -19,10 +17,20 @@ if (! empty($user['check_out'])) {
     $additionalClass = 'checked-in success';
 }
 $groupId = ( ! empty($this->group['id']) ? $this->group['id'] : '');
+
+$showHistoryClass = '';
+if (
+    $this->me['id'] == $user['id'] // this is me
+    || $this->me['role'] >= Application_Model_Auth::ROLE_ADMIN // i am admin
+    || ( ! empty($groupId) && in_array($groupId, $this->me['admin_groups'])) // i am group admin
+) {
+    $showHistoryClass = 'show-history';
+}
+
 ?>
 <tr class="user-row user-id-<?php echo $user['id']?> <?php echo $additionalClass?>">
-    <td>
-        <?php echo $user['full_name']?>
+    <td class="<?php echo $showHistoryClass; ?>">
+        <div class="user-full-name" data-user-id="<?php echo $user['id']?>"><?php echo $user['full_name']?></div>
     </td>
     <td style="text-align: center;">
         <?php
