--- a/application/modules/planner/views/scripts/checking/index.phtml
+++ b/application/modules/planner/views/scripts/checking/index.phtml
@@ -106,4 +106,14 @@ Error! No users.
         </div>
         <div class="user-checking-container"></div>
     </div>
+    <div class="modal-footer">
+        <div class="pull-left">
+            Work hours plan: <?php echo $this->workHoursPlan; ?><br />
+            Work hours done: <?php echo $this->workHoursDone; ?><br />
+            Work hours overtime: <?php echo $this->workHoursOvertime; ?><br />
+        </div>
+        <div class="pull-right">
+            <input type="button" class="btn btn-primary" value="Save" />
+        </div>
+    </div>
 </div>
